# mako

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LANGUAGE_SPEC.md  LICENSE  Makefile  README.md  ROADMAP_IMPL.md  SPEC.md  build.rs  llms-full.txt  llms.txt  mako.toml
Formula/: mako.rb
compiler/: main.mko  zzzzzz_ir.mko
docker/: wasi-build.Dockerfile
docs/: ABI.md  ADAPTIVE_OPT.md  ASYNC.md  BUILD.md  BUILTINS.md  CLI.md  COMPAT.md  DEBUG.md  ERGONOMICS.md  EXAMPLES.md  GENERAL_PURPOSE_PLAN.md  GO_SYNTAX_CHECKLIST.md  GUIDE.md  IDENTITY.md  KEYWORDS.md  LANGUAGE.md  LONG_RUNNING.md  MEMORY_MODEL.md  MEMORY_SAFETY.md  MESSAGING_GRAPHQL.md  NATIVE_COMPILER_PLAN.md  PAIN_POINTS.md  PERFORMANCE.md  RELEASE.md  ROADMAP.md  SECURITY.md  SELF_HOSTING.md  SOUNDNESS.md  SPEED.md  SPEED_SAFE.md  STATUS.md  STDLIB.md  TLS_LIVE.md  VERSIONING.md  VISION.md  WASM.md
examples/: actor.mko  arena.mko  arena_append.mko  arena_slice.mko  arena_struct.mko  base64.mko  bench_loop.mko  break_continue.mko  builder.mko  bytes.mko  cancel.mko  chan_range.mko  chan_select.mko  chan_select3.mko  channels.mko  cli_args.mko  concurrency.mko  convert.mko  dbg_demo.mko  defer.mko  derive_json.mko  enum_method.mko  errors_wrap.mko  exit_code.mko  extern_c.mko  extras.mko  file_env.mko  float_slice.mko  fs_polish.mko  generics_iface.mko  graphql_http_server.mko  grpc_unary_roundtrip.mko  h2_dynamic_server.mko  h2_reverse_proxy.mko  h2_server.mko  hello.mko  hold_always_break_ok.mko  hold_break_ok.mko  hold_const_false_ok.mko  hold_continue_noll_ok.mko  (+104 more)
(+615 files in other folders)
